--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -17,28 +17,28 @@ server {
     } 
     location /api/commit {
       rewrite ^(.*) $1 break;
-      proxy_pass "http://openebs-ci-backend-service.default.svc.cluster.local:3000";
+      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     } 
     location /api/build {
       rewrite ^(.*) $1 break;
-      proxy_pass "http://openebs-ci-backend-service.default.svc.cluster.local:3000";
+      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     }
     location /api/pipelines/gcp {
       rewrite ^(.*) $1 break;
-      proxy_pass "http://openebs-ci-backend-service.default.svc.cluster.local:3000";
+      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     }
     location /api/pipelines/konvoy {
       rewrite ^(.*) $1 break;
-      proxy_pass "http://openebs-ci-backend-service.default.svc.cluster.local:3000";
+      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     }
     location /api/pipelines/rancher {
       rewrite ^(.*) $1 break;
-      proxy_pass "http://openebs-ci-backend-service.default.svc.cluster.local:3000";
+      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     }
-    location /v3 {
-    rewrite ^(.*) $1 break;
-    proxy_pass "http://maya-io.default.svc.cluster.local:8080";
-    }
+    #location /v3 {
+    #rewrite ^(.*) $1 break;
+    #proxy_pass "http://maya-io.default.svc.cluster.local:8080";
+    #}
   expires $expires;
   gzip  on;
 }
