--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -15,26 +15,26 @@ server {
       index index.html index.htm;
       try_files $uri $uri/ /index.html =404;
     } 
-    location /api/commit {
+    location /api/rancher {
       rewrite ^(.*) $1 break;
       proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     } 
-    location /api/build {
-      rewrite ^(.*) $1 break;
-      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
-    }
-    location /api/pipelines/gcp {
-      rewrite ^(.*) $1 break;
-      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
-    }
-    location /api/pipelines/konvoy {
-      rewrite ^(.*) $1 break;
-      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
-    }
-    location /api/pipelines/rancher {
-      rewrite ^(.*) $1 break;
-      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
-    }
+    # location /api/build {
+    #   rewrite ^(.*) $1 break;
+    #   proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
+    # }
+    # location /api/pipelines/gcp {
+    #   rewrite ^(.*) $1 break;
+    #   proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
+    # }
+    # location /api/pipelines/konvoy {
+    #   rewrite ^(.*) $1 break;
+    #   proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
+    # }
+    # location /api/pipelines/rancher {
+    #   rewrite ^(.*) $1 break;
+    #   proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
+    # }
     #location /v3 {
     #rewrite ^(.*) $1 break;
     #proxy_pass "http://maya-io.default.svc.cluster.local:8080";
