add metrics endpoint
Signed-off-by: bhaskarhc <hcbhaskar7@gmail.com>

--- a/nginx-custom.conf
+++ b/nginx-custom.conf
@@ -26,6 +26,10 @@ server {
     location /api/konvoy {
       rewrite ^(.*) $1 break;
       proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
+    }
+    location /api/metrics {
+      rewrite ^(.*) $1 break;
+      proxy_pass "http://oep-pipelines-dashboard-backend.default.svc.cluster.local:3000";
     } 
   expires $expires;
   gzip  on;
